# sort.cpp

./: .gitignore  Makefile  Pipfile  README.md  config.json  main.cpp  meson.build  mot-eval.py  requirements.txt
include/sort/: metrics.hpp  sort.hpp  tracker.hpp  utils.hpp
src/: main.cpp  metrics.hpp  sort.cpp  sort.hpp  track.cpp  track.hpp  tracker.cpp  tracker.hpp  utils.hpp
